--- a/ASD/lb4_stack/asd_lb4_stack_queue/asd_lb4_stack_queue.csproj
+++ b/ASD/lb4_stack/asd_lb4_stack_queue/asd_lb4_stack_queue.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
