--- a/ASD/lb8_layer_list/layer_list/layer_list/layer_list.csproj
+++ b/ASD/lb8_layer_list/layer_list/layer_list/layer_list.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LayerList.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
