--- a/MO/Nelder_Mid/Nelder_Mid/Nelder_Mid.csproj
+++ b/MO/Nelder_Mid/Nelder_Mid/Nelder_Mid.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
